// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-deploy - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Execute deployment to Azure. Final step after preparation and validation. Runs azd up, azd deploy, or infrastructure provisioning commands. WHEN: "run azd up", "run azd deploy", "execute deployment", "provision infrastructure", "push to production", "go live", "deploy web app", "deploy Azure Functions", "bicep deploy", "terraform apply".",
  "extractedKeywords": [
    "after",
    "apply",
    "azure",
    "bicep",
    "cli",
    "commands",
    "deploy",
    "deployment",
    "execute",
    "final",
    "function",
    "functions",
    "identity",
    "infrastructure",
    "live",
    "mcp",
    "preparation",
    "production",
    "provision",
    "provisioning",
    "push",
    "runs",
    "step",
    "terraform",
    "validation",
    "when",
  ],
  "name": "azure-deploy",
}
`;

exports[`azure-deploy - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "after",
  "apply",
  "azure",
  "bicep",
  "cli",
  "commands",
  "deploy",
  "deployment",
  "execute",
  "final",
  "function",
  "functions",
  "identity",
  "infrastructure",
  "live",
  "mcp",
  "preparation",
  "production",
  "provision",
  "provisioning",
  "push",
  "runs",
  "step",
  "terraform",
  "validation",
  "when",
]
`;
